[project]
name = "soda-clang"
version = "2025.2.3.0"
description = "use custom built clang with gcc"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []


[dependency-groups]
dev = ["build", "twine"]
[project.urls]
Repository = "https://github.com/soda92/soda_clang"

[project.scripts]
soda_clang = "soda_clang.main:main"
"soda_clang++" = "soda_clang.main:main_cxx"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
packages = ["soda_clang"]

[tool.hatch.build.targets.wheel]
packages = ["soda_clang"]
